--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,22 +1,35 @@
 
 .container {
     border-radius: 15px;
-    margin: 5% auto;
+    margin: 0 auto;
     width: 650px;
-    height: 800px;
+    height: 830px;
     background-color: #9AD1D4;
+    text-align: center;
+    -webkit-box-shadow: 6px 2px 16px -8px rgba(0,0,0,0.75);
+    -moz-box-shadow: 6px 2px 16px -8px rgba(0,0,0,0.75);
+    box-shadow: 6px 2px 16px -8px rgba(0,0,0,0.75);
 }
 
 #text {
-    width: 94%;
-    height: 30px;
-    margin: 2%;
+    border: 1px solid rgb(128, 128, 128);
+    border-radius: 15px;
+    width: 83%;
+    height: 60px;
+    margin: 4% 2% -7%  2%;
+    text-align: left;
+    font-size: 2.5em;
+    padding-left: 5%;
+    -webkit-box-shadow: 6px 2px 16px -8px rgba(0,0,0,0.75);
+    -moz-box-shadow: 6px 2px 16px -8px rgba(0,0,0,0.75);
+    box-shadow: 6px 2px 16px -8px rgba(0,0,0,0.75);
 }
 
 .all-buttons {
-    width: 80%;
-    height: 80%;
+    width: 100%;
+    height: 70%;
     float: left;
+    padding-top: 50px;
 }
 
 .numbers button{
@@ -29,22 +42,33 @@
 }
 
 .numbers {
-    margin: 10% 10%;
     width: 450px;
-    height: 600px;
+    height: auto;
+    float: left;
 }
 
-.number-options {
-    float: right;
-}
 
 .operators{
     float: left;
     width: 19%;
-    margin: 10% 0 0 -5%;
 }
 
 .operators button {
+    border-radius: 100%;
+    background-color: #80CED7;
+    font-size: 2.5em;
+    margin: 8% 0;
+    width: 120px;
+    height: 120px;
+}
+
+.resolve {
+    padding-left: 3%;
+    text-align: left;
+}
+
+
+.resolve button {
     border-radius: 100%;
     background-color: #80CED7;
     font-size: 2.5em;
@@ -53,6 +77,22 @@
     height: 120px;
 }
 
+#equal {
+    width: 410px;
+    border-radius: 15px;
+}
+
 .clear {
     clear: both;
+}
+
+button {
+    cursor: pointer;
+}
+
+button:hover {
+    cursor: pointer;
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(255,255,255,1);
+    -moz-box-shadow: 0px 0px 5px 0px rgba(255,255,255,1);
+    box-shadow: 0px 0px 5px 0px rgba(255,255,255,1);
 }
